--- a/PurchaseSystem/Web.config
+++ b/PurchaseSystem/Web.config
@@ -20,7 +20,7 @@
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.6.1" />
-    <customErrors mode="Off"/>
+    <customErrors mode="RemoteOnly" defaultRedirect="mycustompage.htm"/>
     <httpRuntime targetFramework="4.6.1" />
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
